methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: not found: value verslAvant
  if (verslAvant==true){
      ^MethodsArgs:9: error: not found: value versLavant
  return versLavant
         ^MethodsArgs:9: warning: enclosing method move has result type Unit: return value discarded
  return versLavant
  ^