methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){
  if (verslAvant==true){
    avance()
  }
  else{
    recule()
  }
  return versLavant
}